--- a/content/lang/PySide/de.json
+++ b/content/lang/PySide/de.json
@@ -53,9 +53,9 @@
     "pause": "⏸ Pause",
     "validate": "Überprüfen",
     "clear": "Löschen",
-    "show_password": "👁 Passwort anzeigen",
-    "hide_password": "🔒 Passwort verbergen",
-    "shutdown": "⏻ Herunterfahren",
+    "show_password": "👁",
+    "hide_password": "🔒",
+    "shutdown": "⏻",
     "yes": "Ja",
     "no": "Nein",
     "ok": "OK",
