--- a/content/lang/PySide/ja.json
+++ b/content/lang/PySide/ja.json
@@ -53,9 +53,9 @@
     "pause": "⏸ 一時停止",
     "validate": "確認",
     "clear": "クリア",
-    "show_password": "👁 パスワード表示",
-    "hide_password": "🔒 パスワード非表示",
-    "shutdown": "⏻ シャットダウン",
+    "show_password": "👁",
+    "hide_password": "🔒",
+    "shutdown": "⏻",
     "yes": "はい",
     "no": "いいえ",
     "ok": "OK",
