--- a/content/lang/PySide/en.json
+++ b/content/lang/PySide/en.json
@@ -4,7 +4,7 @@
   
   "window": {
     "title": "AI Kompanions",
-    "chat_title": "Chat with {name}",
+    "chat_title": "🗨️ Chat with {name}",
     "about_title": "About AI Kompanions",
     "about_text": "AI Kompanions\nVersion 1.0\n\nA multilingual AI chat application",
     "confirm_exit_title": "Confirm Exit - AI Kompanions"
