--- a/content/lang/manifest.json
+++ b/content/lang/manifest.json
@@ -1,18 +1,19 @@
 {
-  "version": "1.8",
+  "version": "1.1",
   "last_updated": "2025-08-22T10:00:00Z",
   "files": {
     "en.json": {
-      "version": "1.8",
+      "version": "1.1",
       "description": "English language strings"
     },
     "ja.json": {
-      "version": "1.8",
+      "version": "1.1",
       "description": "Japanese language strings"
     },
     "de.json": {
-      "version": "1.8",
+      "version": "1.1",
       "description": "German language strings"
     }
-  }
+  },
+  "last_sync": "2025-09-03T01:44:58.947246"
 }
